--- a/src/main/webapp/WEB-INF/views/book/add.html
+++ b/src/main/webapp/WEB-INF/views/book/add.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<form method="post" action="/books/add">
+    <input type="text">
+</form>
 </body>
 </html>
