--- a/src/main/webapp/WEB-INF/views/book/add.html
+++ b/src/main/webapp/WEB-INF/views/book/add.html
@@ -5,8 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/books/add">
-    <input type="text">
+<form th:method="POST" action="/book/add" th:object="${book}">
+    <label for="title">Enter title</label>
+    <input type="text" th:field="${book.title}" id="title">
+    <br>
+    <label for="author">Enter author</label>
+    <input type="text" th:field="${book.author}" id="author">
+    <br>
+    <label for="year">Enter year</label>
+    <input type="text" th:field="${book.year}" id="year">
+
+    <input type="submit">
 </form>
+<a href="/book">Go back to book list</a>
 </body>
 </html>
