--- a/src/main/webapp/WEB-INF/views/book/index.html
+++ b/src/main/webapp/WEB-INF/views/book/index.html
@@ -16,12 +16,13 @@
     </thead>
     <tbody>
     <tr th:each="book: ${books}">
-        <td><span th:text="${book.id}">Id</span> </td>
+        <td><a th:href="@{book/{id}(id=${book.id})}" th:text="${book.id}">Id</a> </td>
         <td><span th:text="${book.getTitle()}">Title</span> </td>
         <td><span th:text="${book.getAuthor()}">Author</span> </td>
         <td><span th:text="${book.getYear()}">Year</span> </td>
     </tr>
     </tbody>
 </table>
+<a href="/book/add">Add new book</a>
 </body>
 </html>
