--- a/src/main/webapp/WEB-INF/views/person/index.html
+++ b/src/main/webapp/WEB-INF/views/person/index.html
@@ -5,6 +5,22 @@
     <title>Title</title>
 </head>
 <body>
-
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>FIO</th>
+        <th>Year of birth</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="person: ${people}">
+        <td><a th:href="@{person/{id}(id=${person.id})}" th:text="${person.id}">Id</a> </td>
+        <td><span th:text="${person.FIO}">FIO</span> </td>
+        <td><span th:text="${person.yearOfBirth}">Year of birth</span> </td>
+    </tr>
+    </tbody>
+</table>
+<a href="/person/add">Add new person</a>
 </body>
 </html>
