--- a/src/main/webapp/WEB-INF/views/book/show.html
+++ b/src/main/webapp/WEB-INF/views/book/show.html
@@ -13,14 +13,30 @@
     Author: <b th:text="${book.author}"></b>
     <br>
     Year: <b th:text="${book.getYear()}"></b>
+    <br>
+    <div th:if="${person.isPresent()}">
+        Taken by: <b th:text="${person.get().FIO}"></b>
+        <form th:action="@{/book/release/{id}(id=${book.id})}" method="post">
+            <button type="submit">Release the book</button>
+        </form>
+    </div>
+</div>
+<div th:if="${person.isEmpty()}">
+    Book haven`t been taken by anyone yet
+    <br>
+    <form th:method="post" th:action="@{/book/issue/{id}(id=${book.id})}">
+        <label for="person">Issue book to:</label>
+        <select id="person" th:object="${emptyPerson}" th:field="*{id}">
+            <option th:each="person: ${people}" th:value="${person.id}" th:text="${person.FIO}">text</option>
+        </select>
+        <button type="submit">Issue the book</button>
+    </form>
 </div>
 <a th:href="@{/book/edit/{id}(id=${book.id})}">Edit book</a>
 <br>
 <form th:action="@{/book/delete/{id}(id=${book.id})}" method="post">
-    <button type="submit">Delete</button>
+    <button type="submit">Delete the book</button>
 </form>
-<br>
-<br>
 <a href="/book">Go back to book list</a>
 </body>
 </html>
