--- a/src/main/webapp/WEB-INF/views/book/index.html
+++ b/src/main/webapp/WEB-INF/views/book/index.html
@@ -9,9 +9,9 @@
     <thead>
     <tr>
         <th>Id</th>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Year</th>
+        <th>Название</th>
+        <th>Автор</th>
+        <th>Год</th>
     </tr>
     </thead>
     <tbody>
@@ -23,8 +23,8 @@
     </tr>
     </tbody>
 </table>
-<a href="/book/add">Add new book</a>
+<a href="/book/add">Добавить новую книгу</a>
 <br>
-<a href="/person/">Person list</a>
+<a href="/person/">Список читателей</a>
 </body>
 </html>
