--- a/src/main/webapp/WEB-INF/views/person/add.html
+++ b/src/main/webapp/WEB-INF/views/person/add.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 <form th:method="POST" action="/person/add" th:object="${person}">
-    <label for="title">Enter FIO</label>
+    <label for="title">ФИО</label>
     <input type="text" th:field="${person.FIO}" id="title">
+    <div style="color:red" th:if="${#fields.hasErrors()}" th:errors="*{FIO}"></div>
     <br>
-    <label for="author">Enter year of birth</label>
+    <label for="author">Год рождения</label>
     <input type="text" th:field="${person.yearOfBirth}" id="author">
+    <div style="color:red" th:if="${#fields.hasErrors()}" th:errors="*{yearOfBirth}"></div>
 
     <input type="submit">
 </form>
-<a href="/person">Go back to person list</a>
+<a href="/person">Вернуться к списку людей</a>
 </body>
 </html>
