--- a/src/main/webapp/WEB-INF/views/person/show.html
+++ b/src/main/webapp/WEB-INF/views/person/show.html
@@ -8,21 +8,21 @@
 <div>
     Id: <b th:text="${person.id}"></b>
     <br>
-    FIO: <b th:text="${person.FIO}"></b>
+    ФИО: <b th:text="${person.FIO}"></b>
     <br>
-    Year of birth: <b th:text="${person.yearOfBirth}"></b>
+    Год рождения: <b th:text="${person.yearOfBirth}"></b>
 </div>
 <a th:href="@{/person/edit/{id}(id=${person.id})}">Edit person</a>
 <br>
 <div th:if="not ${books.isEmpty()}">
-    <h3>Taken books</h3>
+    <h3>Взятые книги</h3>
 <table>
     <thead>
     <tr>
         <th>Id</th>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Year</th>
+        <th>Название</th>
+        <th>Автор</th>
+        <th>Год</th>
     </tr>
     </thead>
     <tbody>
@@ -35,10 +35,10 @@
     </tbody>
 </table>
 </div>
-<h3 th:if="${books.isEmpty()}">Person haven`t taken any book yet</h3>
+<h3 th:if="${books.isEmpty()}">Человек пока не взял ни одной книги</h3>
 <form th:action="@{/person/delete/{id}(id=${person.id})}" method="post">
-    <button type="submit">Delete</button>
+    <button type="submit">Удалить посетителя</button>
 </form>
-<a href="/person">Go back to book list</a>
+<a href="/person">Вернуться к списку посетителей</a>
 </body>
 </html>
