--- a/src/main/webapp/WEB-INF/views/book/search.html
+++ b/src/main/webapp/WEB-INF/views/book/search.html
@@ -5,7 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-<table>
+Поиск:
+<form th:method="GET" action="/book/search">
+    <label for="query">Введите название книги</label>
+    <input type="text" id="query" name="query">
+    <input type="submit">
+</form>
+
+<div th:if="${foundBooks != null}">
+    <b th:if="${foundBooks.isEmpty()} Книг по такому запросу не найдено"></b>
+<table th:if="${!foundBooks.isEmpty()}">
+    Найденные книги:
     <thead>
     <tr>
         <th>Id</th>
@@ -15,7 +25,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="book: ${books.getContent()}">
+    <tr th:each="book: ${foundBooks}">
         <td><a th:href="@{/book/{id}(id=${book.id})}" th:text="${book.id}">Id</a> </td>
         <td><span th:text="${book.getTitle()}">Title</span> </td>
         <td><span th:text="${book.getAuthor()}">Author</span> </td>
@@ -23,20 +33,7 @@
     </tr>
     </tbody>
 </table>
-<br>
-<b th:if="${books.getTotalPages()>0}" th:each="pageNumber: ${pageNumbers}">
-    <a th:href="@{/book(page=${pageNumber})}" th:text="${pageNumber}"></a>
-</b>
-<br>
-Sort by:
-<a href="/book?sortBy=id">Id</a>
-<a href="/book?sortBy=author">Author</a>
-<a href="/book?sortBy=year">Year</a>
-<br>
-<a href="/book/add">Добавить новую книгу</a>
-<br>
-<a href="/person/">Список читателей</a>
-<br>
-<a href="/book/search/">Поиск книги</a>
+</div>
+<a href="/book">Вернуться к списку книг</a>
 </body>
 </html>
