--- a/src/main/webapp/WEB-INF/views/book/show.html
+++ b/src/main/webapp/WEB-INF/views/book/show.html
@@ -14,14 +14,14 @@
     <br>
     Год: <b th:text="${book.getYear()}"></b>
     <br>
-    <div th:if="${person.isPresent()}">
-        Taken by: <b th:text="${person.get().FIO}"></b>
+    <div th:if="${person != null}">
+        Taken by: <b th:text="${person.FIO}"></b>
         <form th:action="@{/book/release/{id}(id=${book.id})}" method="post">
             <button type="submit">Освободить книгу</button>
         </form>
     </div>
 </div>
-<div th:if="${person.isEmpty()}">
+<div th:if="${person == null}">
     Книгу пока что никто не взял
     <br>
     <form th:method="post" th:action="@{/book/issue/{id}(id=${book.id})}">
