--- a/src/main/webapp/WEB-INF/views/person/show.html
+++ b/src/main/webapp/WEB-INF/views/person/show.html
@@ -12,7 +12,7 @@
     <br>
     Год рождения: <b th:text="${person.yearOfBirth}"></b>
 </div>
-<a th:href="@{/person/edit/{id}(id=${person.id})}">Edit person</a>
+<a th:href="@{/person/edit/{id}(id=${person.id})}">Редактировать человека</a>
 <br>
 <div th:if="not ${books.isEmpty()}">
     <h3>Взятые книги</h3>
@@ -28,7 +28,7 @@
     <tbody>
     <tr th:each="book: ${books}">
         <td th:text="${book.id}" th:href="@{book/{id}(id=${book.id})}"></td>
-        <td th:text="${book.title}"></td>
+        <td th:style="${book.isBookDelayed() ? 'color:red' : 'color:blue'}" th:text="${book.title}"></td>
         <td th:text="${book.author}"></td>
         <td th:text="${book.year}"></td>
     </tr>
